--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@ body.index-page {
   text-align: left;
   font-weight: 700;
   padding: 6px;
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-family: Neuton, Hoefler Text, Palatino, Baskerville, Georgia,
     Times New Roman, serif;
 }
@@ -138,6 +138,10 @@ ul + ul {
 
 ul {
   padding-left: 1.1em;
+}
+
+#pinned-posts ul {
+  padding: 0;
 }
 
 .bio li {
